--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -3,6 +3,6 @@
     height: 75vh;
     background-image: url('beer_flight.jpg');
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: center top 25%;
     background-size: cover;
 }
